# eyedetect

./: CMakeLists.txt  README.md  eyedetector.h  haarcascade421.xml  main.cpp
